--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <source src="images/segthor_after.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
-                <img src='images/supernet2supernet.png' width="160">
+                <img src='images/segthor.png' width="160">
               </div>
               <script type="text/javascript">
                 function segthor_start() {
@@ -153,7 +153,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>3D Enhanced Multi-scale Network for Thoracic Organs Segmentation</papertitle>
+                <papertitle><a href="http://ceur-ws.org/Vol-2349/SegTHOR2019_paper_8.pdf">3D Enhanced Multi-scale Network for Thoracic Organs Segmentation</a></papertitle>
               </a>
               <br>
               Qin Wang, Weibing Zhao, Chunhui Zhang, Liyue Zhang, Changmiao Wang, Zhen Li, Shuguang Cui, Guanbin Li
