--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                 <a href="mailto:chunhuizhang@brandeis.edu">Email</a> &nbsp/&nbsp
                 <a href="data/chunhui-CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="null">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/aragakiyuiii">Github</a>
+                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
