--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <a href="mailto:chunhuizhang@brandeis.edu">Email</a> &nbsp/&nbsp
                 <a href="data/chunhui-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="null">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com.hk/citations?view_op=list_works&hl=zh-CN&user=im3dmssAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
                 <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> 
