--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="data/resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?view_op=list_works&hl=zh-CN&user=im3dmssAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
                 <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> 
               </p>
