--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <br>
               <a href="">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="data/aaai22w_adasearch.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
