--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="https://www.researchgate.net/publication/358814243_Towards_Tailored_Models_on_Private_AIoT_Devices_Federated_Direct_Neural_Architecture_Search">
+							<a href="https://ieeexplore.ieee.org/document/9721425">
                 <papertitle>Towards Tailored Models on Private AIoT Devices: Federated Direct Neural Architecture Search</papertitle>
               </a>
               <br>
