--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
               <br>
               <a href="">project page</a>
               /
+              <a href="data/adaSearch_slides.pdf">slides</a>
+              /
               <a href="data/aaai22w_adasearch.pdf">preprint</a>
               <p></p>
             </td>
