--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
-                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> 
+                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a>
+                <a href="https://www.instagram.com/onlyfoolrushsin/">Instagram</a>
+
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
