--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <br>
         <em>IEEE Internet of Things Journal (IOTJ)</em>, Feb. 2022.
               <br>
-              <a href="">project page</a>
+              <a href="https://github.com/aragakiyuiii/FDNAS">project page</a>
               /
               <a href="https://www.researchgate.net/publication/358814243_Towards_Tailored_Models_on_Private_AIoT_Devices_Federated_Direct_Neural_Architecture_Search">preprint</a>
               <p></p>
