--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
                 <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> &nbsp/&nbsp
-                <a href="https://www.instagram.com/onlyfoolrushsin/">Instagram</a>
+                <a href="https://www.instagram.com/chunhuizng/">Instagram</a>
 
               </p>
             </td>
