--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <a href="https://scholar.google.com.hk/citations?view_op=list_works&hl=zh-CN&user=im3dmssAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a> &nbsp/&nbsp
-                <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp
-                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> &nbsp/&nbsp
-                <a href="https://www.instagram.com/chunhuizng/">Instagram</a>
+<!--                <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp-->
+<!--                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> &nbsp/&nbsp-->
+<!--                <a href="https://www.instagram.com/chunhuizng/">Instagram</a>-->
 
               </p>
             </td>
