--- a/index.html
+++ b/index.html
@@ -64,6 +64,42 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <tr onmouseout="sgcl_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/fdnas_after.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/sgcl.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Look Twice as Much as You Say: Scene Graph Contrastive Learning for Self-Supervised Image Caption Generation</papertitle>
+              </a>
+              <br>
+              Chunhui Zhang, Chao Huang, Youhuan Li, Xiangliang Zhang, Yanfang Ye and Chuxu Zhang
+              <br>
+        <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2022.
+              <br>
+              <a href="https://github.com/aragakiyuiii/SGCL">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+
         <tr onmouseout="fdnas_stop()" onmouseover="fdnas_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
