--- a/index.html
+++ b/index.html
@@ -63,7 +63,41 @@
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr onmouseout="graphbert_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/fdnas_after.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/graphbert.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
 
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>GraphBERT: Bridging Graph and Text for Malicious Behavior Detection on Social Media</papertitle>
+              </a>
+              <br>
+              Jiele Wu, Chunhui Zhang, Zheyuan Liu, Erchi Zhang, Steven Wilson, and Chuxu Zhang
+              <br>
+        <em>IEEE International Conference on Data Mining (ICDM)</em>, 2022.
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
         <tr onmouseout="sgcl_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
