--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:chunhuizhang@brandeis.edu">Email</a> &nbsp/&nbsp
-                <a href="data/resume.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/resume_09042022.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?view_op=list_works&hl=zh-CN&user=im3dmssAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a>
