update material oct16

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
-<!--                <img src='images/GLA.png' width="160">-->
+                <img src='images/neurips_cl.png' width="160">
               </div>
               <script type="text/javascript">
                 function fdnas_start() {
@@ -99,7 +99,7 @@
               <br>
               <a href="">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="https://arxiv.org/abs/2205.09802">preprint</a>
               <p></p>
             </td>
           </tr>
@@ -110,7 +110,7 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
-<!--                <img src='images/CMI.png' width="160">-->
+                <img src='images/neurips_cross_modal.png' width="160">
               </div>
               <script type="text/javascript">
                 function fdnas_start() {
@@ -169,7 +169,7 @@
               <br>
               <a href="">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="data/GraphBERT-%20Bridging%20Graph%20and%20Text%20for%20Malicious%20Behavior%20Detection%20on%20Social%20Media-ICDM22.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
@@ -204,7 +204,7 @@
               <br>
               <a href="https://github.com/aragakiyuiii/SGCL">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="data/Look%20Twice%20as%20Much%20as%20You%20Say-Scene%20Graph%20Contrastive%20Learning%20for%20Self-Supervised%20Image%20Caption%20Generation-CIKM22.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
