update code and project Dec 22

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
-              <a href="">project page</a>
+              <a href="https://github.com/brandeis-machine-learning/Graph-Label-invariant-Augmentation">project page</a>
               /
               <a href="https://arxiv.org/abs/2205.09802">preprint</a>
               <p></p>
@@ -132,9 +132,9 @@
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
-              <a href="">project page</a>
+              <a href="https://openreview.net/forum?id=f_kvHrM4Q0">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="https://openreview.net/forum?id=f_kvHrM4Q0">preprint</a>
               <p></p>
             </td>
           </tr>
