update code and journal Dec 22

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
               <br>
-              <a href="">project page</a>
+              <a href="https://www.dropbox.com/sh/8jaq9zekzl3khni/AAA0kNDs_UMxj4YbTEKKyiXna?dl=0">project page</a>
               /
               <a href="https://openreview.net/forum?id=9WzO0hjiziy&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DNeurIPS.cc%2F2022%2FWorkshop%2FGLFrontiers%2FAuthors%23your-submissions)">preprint</a>
               <p></p>
@@ -275,7 +275,7 @@
               <br>
               Chunhui Zhang, Xiaoming Yuan, Qianyun Zhang, Guangxu Zhu, Lei Cheng, and Ning Zhang
               <br>
-        <em>IEEE Internet of Things Journal (IOTJ)</em>, Feb. 2022.
+        <em>IEEE Internet of Things Journal (IoTJ)</em>, Feb. 2022.
               <br>
               <a href="https://github.com/aragakiyuiii/FDNAS">project page</a>
               /
