update pub Jan 22

--- a/index.html
+++ b/index.html
@@ -75,6 +75,111 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/iclr_game.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Chasing All-Round Graph Representation Robustness: Model, Training, and Optimization</papertitle>
+              </a>
+              <br>
+              Chunhui Zhang, Yijun Tian, Mingxuan Ju, Zheyuan Liu, Yanfang Ye, Nitesh Chawla, and Chuxu Zhang
+              <br>
+        <em>The 11th International Conference on Learning Representations (ICLR)</em>, 2023.
+              <br>
+              <a href="https://openreview.net/forum?id=7jk5gWjC18M">project page</a>
+              /
+              <a href="https://openreview.net/forum?id=7jk5gWjC18M">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/aaai_bgnn.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Boosting Graph Neural Networks via Adaptive Knowledge Distillation</papertitle>
+              </a>
+              <br>
+              Zhichun Guo, Chunhui Zhang, Yujie Fan, Yijun Tian, Chuxu Zhang, and Nitesh Chawla
+              <br>
+        <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
+              <br>
+              <a href="https://arxiv.org/pdf/2210.05920.pdf">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2210.05920.pdf">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/aaai_hgmae.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Heterogeneous Graph Masked Autoencoders</papertitle>
+              </a>
+              <br>
+              Yijun Tian, Kaiwen Dong, Chunhui Zhang, Chuxu Zhang, and Nitesh Chawla
+              <br>
+        <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
+              <br>
+              <a href="https://arxiv.org/abs/2208.09957">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2208.09957">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/neurips_cl.png' width="160">
               </div>
               <script type="text/javascript">
@@ -167,7 +272,7 @@
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
               <br>
-              <a href="">project page</a>
+              <a href="https://www.dropbox.com/sh/8jaq9zekzl3khni/AAA0kNDs_UMxj4YbTEKKyiXna?dl=0">project page</a>
               /
               <a href="https://openreview.net/forum?id=9WzO0hjiziy&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DNeurIPS.cc%2F2022%2FWorkshop%2FGLFrontiers%2FAuthors%23your-submissions)">preprint</a>
               <p></p>
@@ -275,7 +380,7 @@
               <br>
               Chunhui Zhang, Xiaoming Yuan, Qianyun Zhang, Guangxu Zhu, Lei Cheng, and Ning Zhang
               <br>
-        <em>IEEE Internet of Things Journal (IOTJ)</em>, Feb. 2022.
+        <em>IEEE Internet of Things Journal (IoTJ)</em>, Feb. 2022.
               <br>
               <a href="https://github.com/aragakiyuiii/FDNAS">project page</a>
               /
