--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
               </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/now_slimmer_than_photo.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/now_slimmer_than_photo.jpeg" class="hoverZoomLink"></a>
+            <td style="padding:2.5%;width:26%;max-width:26%">
+              <a href="images/img.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/img.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
