--- a/index.html
+++ b/index.html
@@ -125,12 +125,15 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>G-Fame: Fair Graph Representation Learning via Diverse Mixture of Experts</papertitle>
+                <papertitle>Fair Graph Representation Learning via Diverse Mixture of Experts</papertitle>
               </a>
               <br>
               Zheyuan Liu*, Chunhui Zhang*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
+                <br>
+                <em>Note: Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
+<!--              <br>-->
               <br>
               <a href="">project page</a>
               /
