--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <papertitle>Chasing All-Round Graph Representation Robustness: Model, Training, and Optimization</papertitle>
               </a>
               <br>
-              Chunhui Zhang, Yijun Tian, Mingxuan Ju, Zheyuan Liu, Yanfang Ye, Nitesh Chawla, and Chuxu Zhang
+              <b>Chunhui Zhang</b>, Yijun Tian, Mingxuan Ju, Zheyuan Liu, Yanfang Ye, Nitesh Chawla, and Chuxu Zhang
               <br>
         <em>The 11th International Conference on Learning Representations (ICLR)</em>, 2023.
               <br>
@@ -128,7 +128,7 @@
                 <papertitle>Fair Graph Representation Learning via Diverse Mixture of Experts</papertitle>
               </a>
               <br>
-              Zheyuan Liu*, Chunhui Zhang*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
+              Zheyuan Liu*, <b>Chunhui Zhang</b>*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
                 <br>
@@ -167,7 +167,7 @@
                 <papertitle>Boosting Graph Neural Networks via Adaptive Knowledge Distillation</papertitle>
               </a>
               <br>
-              Zhichun Guo, Chunhui Zhang, Yujie Fan, Yijun Tian, Chuxu Zhang, and Nitesh Chawla
+              Zhichun Guo, <b>Chunhui Zhang</b>, Yujie Fan, Yijun Tian, Chuxu Zhang, and Nitesh Chawla
               <br>
         <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
               <br>
@@ -202,7 +202,7 @@
                 <papertitle>Heterogeneous Graph Masked Autoencoders</papertitle>
               </a>
               <br>
-              Yijun Tian, Kaiwen Dong, Chunhui Zhang, Chuxu Zhang, and Nitesh Chawla
+              Yijun Tian, Kaiwen Dong, <b>Chunhui Zhang</b>, Chuxu Zhang, and Nitesh Chawla
               <br>
         <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
               <br>
@@ -237,7 +237,7 @@
                 <papertitle>Label-invariant Augmentation for Semi-Supervised Graph Classification</papertitle>
               </a>
               <br>
-              Han Yue, Chunhui Zhang, Chuxu Zhang, and Hongfu Liu
+              Han Yue, <b>Chunhui Zhang</b>, Chuxu Zhang, and Hongfu Liu
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
@@ -272,7 +272,7 @@
                 <papertitle>Co-Modality Imbalanced Graph Contrastive Learning</papertitle>
               </a>
               <br>
-              Yiyue Qian, Chunhui Zhang, Yiming Zhang, Qianlong Wen, Yanfang Ye, and Chuxu Zhang
+              Yiyue Qian, <b>Chunhui Zhang</b>, Yiming Zhang, Qianlong Wen, Yanfang Ye, and Chuxu Zhang
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
@@ -307,7 +307,7 @@
                 <papertitle>Diving into Unified Data-Model Sparsity for Class-Imbalanced Graph Representation Learning</papertitle>
               </a>
               <br>
-              Chunhui Zhang, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
+              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
               <br>
@@ -342,7 +342,7 @@
                 <papertitle>GraphBERT: Bridging Graph and Text for Malicious Behavior Detection on Social Media</papertitle>
               </a>
               <br>
-              Jiele Wu, Chunhui Zhang, Zheyuan Liu, Erchi Zhang, Steven Wilson, and Chuxu Zhang
+              Jiele Wu, <b>Chunhui Zhang</b>, Zheyuan Liu, Erchi Zhang, Steven Wilson, and Chuxu Zhang
               <br>
         <em>IEEE International Conference on Data Mining (ICDM)</em>, 2022.
               <br>
@@ -377,7 +377,7 @@
                 <papertitle>Look Twice as Much as You Say: Scene Graph Contrastive Learning for Self-Supervised Image Caption Generation</papertitle>
               </a>
               <br>
-              Chunhui Zhang, Chao Huang, Youhuan Li, Xiangliang Zhang, Yanfang Ye, and Chuxu Zhang
+              <b>Chunhui Zhang</b>, Chao Huang, Youhuan Li, Xiangliang Zhang, Yanfang Ye, and Chuxu Zhang
               <br>
         <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2022.
               <br>
@@ -417,7 +417,7 @@
                 <papertitle>Towards Tailored Models on Private AIoT Devices: Federated Direct Neural Architecture Search</papertitle>
               </a>
               <br>
-              Chunhui Zhang, Xiaoming Yuan, Qianyun Zhang, Guangxu Zhu, Lei Cheng, and Ning Zhang
+              <b>Chunhui Zhang</b>, Xiaoming Yuan, Qianyun Zhang, Guangxu Zhu, Lei Cheng, and Ning Zhang
               <br>
         <em>IEEE Internet of Things Journal (IoTJ)</em>, Feb. 2022.
               <br>
@@ -453,7 +453,7 @@
                 <papertitle>AdaSearch: Many-to-One Unified Neural Architecture Search via A Smooth Curriculum</papertitle>
               </a>
               <br>
-              Chunhui Zhang*, Yongyuan Liang*, and Yifan Jiang*
+              <b>Chunhui Zhang</b>*, Yongyuan Liang*, and Yifan Jiang*
               <br>
         <em><a href="https://www.cmu.edu/epp/patents/events/aaai22/">AAAI-22 Workshop: Learning Network Architecture During Training</a></em>.
               <br>
@@ -491,7 +491,7 @@
                 <papertitle><a href="http://ceur-ws.org/Vol-2349/SegTHOR2019_paper_8.pdf">3D Enhanced Multi-scale Network for Thoracic Organs Segmentation</a></papertitle>
               </a>
               <br>
-              Qin Wang, Weibing Zhao, Chunhui Zhang, Liyue Zhang, Changmiao Wang, Zhen Li, Shuguang Cui, Guanbin Li
+              Qin Wang, Weibing Zhao, <b>Chunhui Zhang</b>, Liyue Zhang, Changmiao Wang, Zhen Li, Shuguang Cui, Guanbin Li
               <br>
         <em><a href="http://ceur-ws.org/Vol-2349/">16th ISBI Workshop Proceedings: Segmentation of THoracic Organs at Risk in CT Images</a></em>.
               <br>
