--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-              <p>Hi, I am Chunhui Zhang (张春晖), a second year Ph.D. student with <a href="https://www.brandeis.edu/computer-science/">the Michtom School of Computer Science</a> at <a href="https://www.brandeis.edu/">Brandeis University🦉</a>, advised by <a href="https://chuxuzhang.github.io">Prof. Chuxu Zhang</a>. In 2021, I got my B.S. degree from <a href="http://english.neu.edu.cn/">Northeastern University</a>, Qinhuangdao, China.
+              <p>Hi, I am Chunhui Zhang (张春晖), a second year Ph.D. student with <a href="https://www.brandeis.edu/computer-science/">the Michtom School of Computer Science</a> at <a href="https://www.brandeis.edu/">Brandeis University🦉</a>, advised by <a href="https://chuxuzhang.github.io">Prof. Chuxu Zhang</a>.
 
 <!--                  use color to highlight-->
                 </p>
