--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                 <em>Note: Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
 <!--              <br>-->
               <br>
-              <a href="">project page</a>
+              <a href="https://github.com/aragakiyuiii/GFAME">project page</a>
               /
-              <a href="">preprint</a>
+              <a href="data/WWW23_GFAME_cameraready.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
