--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <br>
               <a href="https://github.com/aragakiyuiii/SGCL">project page</a>
               /
-                <a href="data/CIKM22-SGCL-Slides.pdf">slides</a>
+                <a href="data/Vision-Language-cikm22.pdf">slides</a>
               /
                 <a href="data/CIKM22-SGCL-Poster.pdf">poster</a>
               /
