--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
 							<a href="">
-                <papertitle>Fair Graph Representation Learning via Diverse Mixture of Experts</papertitle>
+                <papertitle>Fair Graph Representation Learning via Diverse Mixture-of-Experts</papertitle>
               </a>
               <br>
               Zheyuan Liu*, <b>Chunhui Zhang</b>*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
@@ -317,7 +317,42 @@
               <p></p>
             </td>
           </tr>
-        <tr onmouseout="graphbert_stop()" onmouseover="sgcl_start()">
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/cgfl.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Contrastive Graph Few-Shot Learning</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, Chuxu Zhang.
+              <br>
+        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
+              <br>
+              <a href="https://arxiv.org/pdf/2210.00084.pdf">project page</a>
+              /
+              <a href="https://arxiv.org/pdf/2210.00084.pdf">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+<tr onmouseout="graphbert_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
