--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <br>
         <em>The 11th International Conference on Learning Representations (ICLR)</em>, 2023.
               <br>
-              <a href="https://openreview.net/forum?id=7jk5gWjC18M">project page</a>
+              <a href="https://github.com/aragakiyuiii/GAME">project page</a>
               /
               <a href="https://openreview.net/forum?id=7jk5gWjC18M">preprint</a>
               <p></p>
