--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <br>
               <a href="https://github.com/brandeis-machine-learning/Graph-Label-invariant-Augmentation">project page</a>
               /
-              <a href="https://arxiv.org/abs/2205.09802">preprint</a>
+              <a href="https://openreview.net/forum?id=rg_yN3HpCp">preprint</a>
               <p></p>
             </td>
           </tr>
