--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
               <br>
               <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
               <br>
-        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
+        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop) 2022 & 37th AAAI Conference on Artificial Intelligence-Workshop on DL-Hardware Co-Design for AI Acceleration (AAAI DCAA workshop), <b>Runner-up Award</b> 2023</em>.
               <br>
               <a href="https://www.dropbox.com/sh/8jaq9zekzl3khni/AAA0kNDs_UMxj4YbTEKKyiXna?dl=0">project page</a>
               /
