--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <br>
         <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023.
               <br>
-              <a href="https://arxiv.org/abs/2208.09957">project page</a>
+              <a href="https://github.com/meettyj/HGMAE">project page</a>
               /
               <a href="https://arxiv.org/abs/2208.09957">preprint</a>
               <p></p>
@@ -276,7 +276,7 @@
               <br>
         <em>Thirty-sixth Conference on Neural Information Processing Systems (NeurIPS)</em>, 2022.
               <br>
-              <a href="https://openreview.net/forum?id=f_kvHrM4Q0">project page</a>
+              <a href="https://github.com/graphprojects/CM-GCL">project page</a>
               /
               <a href="https://openreview.net/forum?id=f_kvHrM4Q0">preprint</a>
               <p></p>
