--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <br>
               <a href="https://github.com/aragakiyuiii/GAME">project page</a>
               /
-              <a href="https://openreview.net/forum?id=7jk5gWjC18M">preprint</a>
+              <a href="https://openreview.net/pdf?id=7jk5gWjC18M">preprint</a>
               <p></p>
             </td>
           </tr>
