--- a/index.html
+++ b/index.html
@@ -537,9 +537,8 @@
 
         </tbody></table>
 
-
-          <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5yn52779znh&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
-        <!--
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0&cl=ffffff&w=a"></script>
+          <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
