--- a/index.html
+++ b/index.html
@@ -537,8 +537,7 @@
 
         </tbody></table>
 
-        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0&cl=ffffff&w=a"></script>
-          <!--
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=152&t=n&d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0'></script>          <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
