--- a/index.html
+++ b/index.html
@@ -537,7 +537,9 @@
 
         </tbody></table>
 
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=152&t=n&d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0'></script>          <!--
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=SXX1ix6syjtN-DQU8-dmeZnMiJx4jDXSxRGDwcrpJz0'></script>
+
+          <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
