--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
               Zheyuan Liu*, <b>Chunhui Zhang</b>*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
-                <br>
-                <em>Note: Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
-<!--              <br>-->
-              <br>
               <a href="https://github.com/aragakiyuiii/GFAME">project page</a>
               /
               <a href="data/WWW23_GFAME_cameraready.pdf">preprint</a>
+                <br>
+                <em>Note: Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
+              <br>
               <p></p>
             </td>
           </tr>
@@ -309,7 +308,7 @@
               <br>
               <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
               <br>
-        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop) 2022 & 37th AAAI Conference on Artificial Intelligence-Workshop on DL-Hardware Co-Design for AI Acceleration (AAAI DCAA workshop), <b>Runner-up Award</b> 2023</em>.
+        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop) 2022 & 37th AAAI Conference on Artificial Intelligence-Workshop on DL-Hardware Co-Design for AI Acceleration (AAAI DCAA workshop), <b>Best Paper Runner-up Award</b> 2023</em>.
               <br>
               <a href="https://www.dropbox.com/sh/8jaq9zekzl3khni/AAA0kNDs_UMxj4YbTEKKyiXna?dl=0">project page</a>
               /
@@ -423,6 +422,48 @@
                 <a href="data/CIKM22-SGCL-Poster.pdf">poster</a>
               /
               <a href="data/Look%20Twice%20as%20Much%20as%20You%20Say-Scene%20Graph%20Contrastive%20Learning%20for%20Self-Supervised%20Image%20Caption%20Generation-CIKM22.pdf">preprint</a>
+              <br>
+                <em>Note: The case study of this paper is funny! It first finds that language representation can emerge from a purely image-pretrained model.</em>
+              <br><p></p>
+            </td>
+          </tr>
+
+        <tr onmouseout="adasearch_stop()" onmouseover="adasearch_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='adasearch_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/adasearch_after.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/supernet2supernet.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function adasearch_start() {
+                  document.getElementById('adasearch_image').style.opacity = "1";
+                }
+
+                function adasearch_stop() {
+                  document.getElementById('adasearch_image').style.opacity = "0";
+                }
+                adasearch_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>AdaSearch: Many-to-One Unified Neural Architecture Search via A Smooth Curriculum</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>*, Yongyuan Liang*, and Yifan Jiang*
+              <br>
+        <em><a href="https://www.cmu.edu/epp/patents/events/aaai22/">AAAI-22 Workshop: Learning Network Architecture During Training</a></em>.
+              <a href="https://github.com/aragakiyuiii/AdaSearch">project page</a>
+              /
+              <a href="data/adaSearch_slides.pdf">slides</a>
+              /
+              <a href="data/aaai22w_adasearch.pdf">preprint</a>
+                <br>A fun fact:
+                <em> Co-first author <a href="https://yifanjiang19.github.io/">Yifan Jiang</a> is a talented and tasteful PhD candidate who mentored me throughout this project. Harvesting a lot from this experience. Taking a glance at his personal homepage!</em>
+                <br>
               <p></p>
             </td>
           </tr>
@@ -459,49 +500,12 @@
               <a href="https://github.com/aragakiyuiii/FDNAS">project page</a>
               /
               <a href="https://www.researchgate.net/publication/358814243_Towards_Tailored_Models_on_Private_AIoT_Devices_Federated_Direct_Neural_Architecture_Search">preprint</a>
-              <p></p>
+              <br>A fun fact:
+                <em> Corresponding author <a href="https://person.zju.edu.cn/en/leicheng">Dr. Lei Cheng</a> is the best professor I have ever met. As a fresh researcher, grateful for his very nice trust and professional advice.</em>
+                <br><p></p>
             </td>
           </tr>
 
-        <tr onmouseout="adasearch_stop()" onmouseover="adasearch_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='adasearch_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/adasearch_after.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/supernet2supernet.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function adasearch_start() {
-                  document.getElementById('adasearch_image').style.opacity = "1";
-                }
-
-                function adasearch_stop() {
-                  document.getElementById('adasearch_image').style.opacity = "0";
-                }
-                adasearch_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="">
-                <papertitle>AdaSearch: Many-to-One Unified Neural Architecture Search via A Smooth Curriculum</papertitle>
-              </a>
-              <br>
-              <b>Chunhui Zhang</b>*, Yongyuan Liang*, and Yifan Jiang*
-              <br>
-        <em><a href="https://www.cmu.edu/epp/patents/events/aaai22/">AAAI-22 Workshop: Learning Network Architecture During Training</a></em>.
-              <br>
-                <em>A Fun Fact: Co-first author <a href="https://yifanjiang19.github.io/">Yifan Jiang</a> is a talented and tasteful PhD who mentored me throughout this project. Harvesting a lot from this experience. Taking a glance at his personal homepage!</em>
-                <br>
-              <a href="https://github.com/aragakiyuiii/AdaSearch">project page</a>
-              /
-              <a href="data/adaSearch_slides.pdf">slides</a>
-              /
-              <a href="data/aaai22w_adasearch.pdf">preprint</a>
-              <p></p>
-            </td>
-          </tr>
 
         <tr onmouseout="segthor_stop()" onmouseover="segthor_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
