--- a/index.html
+++ b/index.html
@@ -75,6 +75,42 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/GraphDec.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>When Sparsity Meets Contrastive Models: Less Data Can Bring Better Class-Balanced Representations</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Chao Huang, Yijun Tian, Qianlong Wen, Zhongyu Ouyang, Youhuan Li, Yanfang Ye, Chuxu Zhang
+              <br>
+        <em>Fortieth International Conference on Machine Learning (ICML) 2023</em>.
+              <br>
+              <a href="https://openreview.net/forum?id=3jV525Hmqr">project page</a>
+              /
+              <a href="https://openreview.net/pdf?id=3jV525Hmqr">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/iclr_game.png' width="160">
               </div>
               <script type="text/javascript">
