--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a second-year Ph.D. student with <a href="https://www.brandeis.edu/computer-science/">the Michtom School of Computer Science</a> at <a href="https://www.brandeis.edu/">Brandeis University🦉</a></a>. I am advised by <a href="https://chuxuzhang.github.io/">Prof. Chuxu Zhang</a>.
+              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a second-year Ph.D. student with the Michtom School of Computer Science at Brandeis University🦉, working with Prof. Chuxu Zhang.
 
 <!--                  use color to highlight-->
                 </p>
