--- a/index.html
+++ b/index.html
@@ -139,6 +139,41 @@
               <p></p>
             </td>
           </tr>
+               <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/cgfl.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Mind the Gap: Mitigating the Distribution Gap in Graph Few-shot Learning</papertitle>
+              </a>
+              <br>
+              <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, Chuxu Zhang.
+              <br>
+        <em>Transactions on Machine Learning Research</em>, 2023.
+              <br>
+              <a href="https://openreview.net/forum?id=LEVbhNrLEL">project page</a>
+              /
+              <a href="https://openreview.net/forum?id=LEVbhNrLEL">preprint</a>
+              <p></p>
+            </td>
+          </tr>
         <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -349,41 +384,6 @@
               <a href="https://www.dropbox.com/sh/8jaq9zekzl3khni/AAA0kNDs_UMxj4YbTEKKyiXna?dl=0">project page</a>
               /
               <a href="https://openreview.net/forum?id=9WzO0hjiziy&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DNeurIPS.cc%2F2022%2FWorkshop%2FGLFrontiers%2FAuthors%23your-submissions)">preprint</a>
-              <p></p>
-            </td>
-          </tr>
-        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
-<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/cgfl.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function fdnas_start() {
-                  document.getElementById('fdnas_image').style.opacity = "1";
-                }
-
-                function fdnas_stop() {
-                  document.getElementById('fdnas_image').style.opacity = "0";
-                }
-                fdnas_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="">
-                <papertitle>Contrastive Graph Few-Shot Learning</papertitle>
-              </a>
-              <br>
-              <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, Chuxu Zhang.
-              <br>
-        <em>Thirty-sixth Conference on Neural Information Processing Systems-New Frontiers in Graph Learning Workshop (NeurIPS GLFrontiers Workshop)</em>, 2022.
-              <br>
-              <a href="https://arxiv.org/pdf/2210.00084.pdf">project page</a>
-              /
-              <a href="https://arxiv.org/pdf/2210.00084.pdf">preprint</a>
               <p></p>
             </td>
           </tr>
