--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a second-year Ph.D. student with the Michtom School of Computer Science at Brandeis University🦉, working with Prof. Chuxu Zhang.
+              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a second-year Ph.D. student with the Michtom School of Computer Science at Brandeis University🦉.
 
 <!--                  use color to highlight-->
                 </p>
