--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="mailto:chunhuizhang@brandeis.edu">Email</a> &nbsp/&nbsp
                 <a href="data/resume_Chunhui_Zhang.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?user=im3dmssAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/aragakiyuiii">Github</a> &nbsp/&nbsp
+                <a href="https://github.com/chunhuizng">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a>
 <!--                <a href="https://twitter.com/Aragaki12680003">Twitter</a> &nbsp/&nbsp-->
 <!--                <a href="https://www.zhihu.com/people/zhang-chun-hui-99">Zhihu</a> &nbsp/&nbsp-->
@@ -133,7 +133,7 @@
               <br>
         <em>The 11th International Conference on Learning Representations (ICLR)</em>, 2023.
               <br>
-              <a href="https://github.com/aragakiyuiii/GAME">project page</a>
+              <a href="https://github.com/chunhuizng/GAME">project page</a>
               /
               <a href="https://openreview.net/pdf?id=7jk5gWjC18M">preprint</a>
               <p></p>
@@ -202,7 +202,7 @@
               Zheyuan Liu*, <b>Chunhui Zhang</b>*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
-              <a href="https://github.com/aragakiyuiii/GFAME">project page</a>
+              <a href="https://github.com/chunhuizng/GFAME">project page</a>
               /
               <a href="data/WWW23_GFAME_cameraready.pdf">preprint</a>
                 <br>
@@ -451,7 +451,7 @@
               <br>
         <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2022.
               <br>
-              <a href="https://github.com/aragakiyuiii/SGCL">project page</a>
+              <a href="https://github.com/chunhuizng/SGCL">project page</a>
               /
                 <a href="data/Vision-Language-cikm22.pdf">slides</a>
               /
@@ -492,7 +492,7 @@
               <b>Chunhui Zhang</b>*, Yongyuan Liang*, and Yifan Jiang*
               <br>
         <em><a href="https://www.cmu.edu/epp/patents/events/aaai22/">AAAI-22 Workshop: Learning Network Architecture During Training</a></em>.
-              <a href="https://github.com/aragakiyuiii/AdaSearch">project page</a>
+              <a href="https://github.com/chunhuizng/AdaSearch">project page</a>
               /
               <a href="data/adaSearch_slides.pdf">slides</a>
               /
@@ -533,7 +533,7 @@
               <br>
         <em>IEEE Internet of Things Journal (IoTJ)</em>, Feb. 2022.
               <br>
-              <a href="https://github.com/aragakiyuiii/FDNAS">project page</a>
+              <a href="https://github.com/chunhuizng/FDNAS">project page</a>
               /
               <a href="https://www.researchgate.net/publication/358814243_Towards_Tailored_Models_on_Private_AIoT_Devices_Federated_Direct_Neural_Architecture_Search">preprint</a>
               <br>A fun fact:
