--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a Ph.D. student in Computer Science at Dartmouth, working with Professor Soroush Vosoughi.
+              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>.
 
 <!--                  use color to highlight-->
                 </p>
