--- a/index.html
+++ b/index.html
@@ -286,6 +286,41 @@
 <!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
                 </video></div>
+                <img src='images/cikm-het.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fdnas_start() {
+                  document.getElementById('fdnas_image').style.opacity = "1";
+                }
+
+                function fdnas_stop() {
+                  document.getElementById('fdnas_image').style.opacity = "0";
+                }
+                fdnas_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="">
+                <papertitle>Heterogeneous Temporal Graph Neural Network Explainer</papertitle>
+              </a>
+              <br>
+              Jiazheng Li, <b>Chunhui Zhang</b>, Chuxu Zhang
+              <br>
+        <em>ACM International Conference on Information and Knowledge Management (CIKM)</em>, 2023.
+              <br>
+              <a href="">project page</a>
+              /
+              <a href="">preprint</a>
+              <p></p>
+            </td>
+          </tr>
+        <tr onmouseout="CMI_stop()" onmouseover="sgcl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fdnas_image'><video  width=100% height=100% muted autoplay loop>
+<!--                <source src="images/fdnas_after.mp4" type="video/mp4">-->
+                Your browser does not support the video tag.
+                </video></div>
                 <img src='images/neurips_cl.png' width="160">
               </div>
               <script type="text/javascript">
