--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:chunhui.zhang.gr@dartmouth.edu">Email</a> &nbsp/&nbsp
-                <a href="data/resume_Chunhui_Zhang.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/Chunhui_CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?user=im3dmssAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/chunhuizng">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a>
@@ -163,7 +163,7 @@
               <br>
               <b>Chunhui Zhang</b>, Hongfu Liu, Jundong Li, Yanfang Ye, Chuxu Zhang.
               <br>
-        <em>Transactions on Machine Learning Research</em>, 2023.
+        <em>Transactions on Machine Learning Research (TMLR)</em>, 2023.
               <br>
               <a href="https://openreview.net/forum?id=LEVbhNrLEL">project page</a>
               /
@@ -196,7 +196,7 @@
                 <papertitle>Fair Graph Representation Learning via Diverse Mixture-of-Experts</papertitle>
               </a>
               <br>
-              Zheyuan Liu*, <b>Chunhui Zhang</b>*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
+              Zheyuan Liu*, <b>Chunhui Zhang</b> (Co-first author in alphabetical order)*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
               <a href="https://github.com/chunhuizng/GFAME">project page</a>
