--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <p style="text-align:center">
                 <name>Chunhui Zhang</name>
               </p>
-              <p>Hi, I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, working with <a href="https://www.cs.dartmouth.edu/~soroush/">Professor Soroush Vosoughi</a>.
+              <p>Greetings! I am Chunhui Zhang (pronounced as Ch'un-hui Chang), a Ph.D. student in Computer Science at <a href="https://home.dartmouth.edu/">Dartmouth🌲</a>, working with <a href="https://www.cs.dartmouth.edu/~soroush/">Professor Soroush Vosoughi</a>.
 
 <!--                  use color to highlight-->
                 </p>
@@ -38,6 +38,7 @@
                 <a href="data/Chunhui_CV.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com.hk/citations?user=im3dmssAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/chunhuizng">Github</a> &nbsp/&nbsp
+                <a href="https://twitter.com/chunhuizng">Twitter</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/chunhui-zhang-541827161/">LinkedIn</a>
 
               </p>
@@ -611,7 +612,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>To all students</heading>
+              <heading>To all students/Friends</heading>
               <p>
                 If you're up for a casual chat about life, career, or research, feel totally free to shoot me an email to set up a conversation. I'm setting aside 30 minutes every week just for these conversations. I'm especially excited to connect with students from underrepresented groups or those who might be facing challenges (like a lack of equity). Don't hesitate to reach out—I'm all ears!
               </p>
