--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>To all students/Friends</heading>
+              <heading>To all students/friends</heading>
               <p>
-                If you're up for a casual chat about life, career, or research, feel totally free to shoot me an email to set up a conversation. I'm setting aside 30 minutes every week just for these conversations. I'm especially excited to connect with students from underrepresented groups or those who might be facing challenges (like a lack of equity). Don't hesitate to reach out—I'm all ears!
+Feel free to drop me an email if you're up for a laid-back chat about life, career, or research. I'm dedicating (at-least) 30 minutes each week for these discussions, and I'm particularly eager to connect with students from underrepresented backgrounds or those dealing with challenges or inequity. Just reach out – I'm here to listen!
               </p>
               <p>
               </p>
