--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
               Zheyuan Liu*, <b>Chunhui Zhang</b> (Co-first author in alphabetical order)*, Yijun Tian, Erchi Zhang, Chao Huang, Yanfang Ye and Chuxu Zhang
               <br>
         <em>International World Wide Web Conference (WWW)</em>, 2023.
+                <br>
               <a href="https://github.com/chunhuizng/GFAME">project page</a>
               /
               <a href="data/WWW23_GFAME_cameraready.pdf">preprint</a>
-                <br>
-                <em>Note: Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
+                              <br>
+                <em>Co-first author Liu is an undergraduate mentored by me. A pleasant first experience. Thanks Liu.</em>
               <br>
               <p></p>
             </td>
