--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" href="images/Dartmouth-College-Logo.png" type="image/x-icon"/>
+  <link rel="icon" href="images/dartmouth_logo.jpeg" type="image/x-icon"/>
 
 
 </head>
