--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     My past research investigates intrinsic properties of deep learning across diverse modalities, then driving trustworthy real-world applications:
 </p>
 <ul>
-    <li>Robust property of Mixture-of-Experts <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[ICLR]</a></li>
+    <li>Built-in Robustness of Mixture-of-Experts <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[ICLR]</a></li>
     <li>Meta learning on relational structures <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[TMLR]</a></li>
     <li>Low-dimensionality in training data <a href="https://openreview.net/forum?id=3jV525Hmqr">[ICML]</a></li>
     <li>Emergence of language concepts in compact vision models <a href="https://dl.acm.org/doi/pdf/10.1145/3511808.3557382">[CIKM]</a></li>
