--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
               <heading>Research</heading>
 <p>
-    My past research investigates intrinsic properties of deep learning across diverse modalities, then driving trustworthy real-world applications:
+    My past research investigates intrinsic properties of deep learning behind the phenomena across diverse modalities, then driving trustworthy real-world applications:
 </p>
 <ul>
     <li>Inherent robustness of Mixture-of-Experts <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[ICLR]</a></li>
