--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <ul>
     <li>Efficient Vision-Language Alignment in Large Model <a href="">[in submission]</a></li>
     <li>Inherent robustness of Mixture-of-Experts <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[ICLR]</a></li>
-    <li>Meta learning on relational structures <a href="https://openreview.net/pdf?id=7jk5gWjC18M">[TMLR]</a></li>
+    <li>Meta learning on relational structures <a href="https://openreview.net/forum?id=LEVbhNrLEL">[TMLR]</a></li>
     <li>Low-dimensionality in self-supervised training data <a href="https://openreview.net/forum?id=3jV525Hmqr">[ICML]</a> & <a href="https://openreview.net/forum?id=rg_yN3HpCp">[NeurIPS]</a></li>
     <li>Emergence of language concepts in compact vision models <a href="https://dl.acm.org/doi/pdf/10.1145/3511808.3557382">[CIKM]</a></li>
 </ul>
