--- a/index.html
+++ b/index.html
@@ -80,14 +80,16 @@
 
                 <heading>Posts</heading>
               <p>
+            <span style="font-style: italic;">[Dec 10, 2023]</span> At NeurIPS 2023. Looking forward to meeting all friends in NOLA!
+            </p>
+            <p>
             <span style="font-style: italic;">[Nov 11, 2023]</span> Looking for research internship in Summer 2024. I appreciate a ping if you see a job I might fit. :-)
             </p>
             <p>
              <span style="font-style: italic;">[Aug 31, 2023]</span> Happily start my Ph.D. journey at Dartmouth College!
            <br>
                 <span style="font-size: 90%;">
-        I am deeply thankful to all the professors, peers, and family members who stood by me and provided support during <em>my struggle with bullying from my previous advisor (Chuxu Zhang) in Brandeis CS.</em>
-        I am also grateful to the Brandeis CS department for their kind support and understanding.
+        I am grateful to the Brandeis CS department for their kind support and understanding.
         I am looking forward to a new chapter of my life!
     </span>
             </p>
